RELEASING: Releasing 2 package(s)
Releases:
  @moliyu/coc-unocss@1.0.6
  @moliyu/lsp-unocss@1.0.4

[skip ci]

--- a/packages/lsp-unocss/package.json
+++ b/packages/lsp-unocss/package.json
@@ -1,12 +1,17 @@
 {
   "name": "@moliyu/lsp-unocss",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "out/index.js",
   "type": "module",
   "scripts": {
     "dev": "tsc -b -w",
     "build": "tsc -b"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/moliyu/coc-unocss.git",
+    "directory": "packages/lsp-unocss"
   },
   "bin": {
     "unocss-lsp": "./bin/index.js"
