--- a/packages/coc-unocss/package.json
+++ b/packages/coc-unocss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@moliyu/coc-unocss",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Unocss extension with lsp for coc.nvim",
   "author": "moliyu <951028382@qq.com>",
   "license": "MIT",
@@ -9,6 +9,11 @@
   "scripts": {
     "dev": "tsc -b -w",
     "build": "tsc -b"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/moliyu/coc-unocss.git",
+    "directory": "packages/lsp-unocss"
   },
   "engines": {
     "coc": "^0.0.82"
