add build script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev:lsp": "pnpm -C packages/lsp-unocss dev",
-    "dev:coc": "pnpm -C packages/coc-unocss dev"
+    "dev:coc": "pnpm -C packages/coc-unocss dev",
+    "release": "pnpm -r build && pnpm changeset"
   },
   "keywords": [],
   "author": "",
